fixed white space

--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -2,5 +2,6 @@ body {
 	background-color: #999; 
 }
 
-h1, p {color: #EBECEC;
+h1, p {
+	color: #EBECEC;
 }
